Fix travel blocks on mobile

--- a/stylesheets/scss/responsive.scss
+++ b/stylesheets/scss/responsive.scss
@@ -165,6 +165,11 @@ section {
   #schedule li {
     width: 100% !important;
   }
+
+  #travel ul li {
+    width: 100% !important;
+    margin: 1px 0px !important;
+  }
 }
 
 #banner {
